# DemoChemMapping

./: .gitignore  README.md
how_things_are/: CMakeLists.txt
how_things_are/src/: chemical_mechanism_qx5.F90  chemical_mechanism_qx5_data.F90  chemical_mechanism_qxz.F90  chemical_mechanism_qxz_data.F90  emission_ares.F90  emission_marge.F90  host_model.F90  host_model_data.F90  photolysis_fastj.F90  photolysis_tuv.F90
how_things_could_be/: CMakeLists.txt
how_things_could_be/config/: fastj.config  marge.config  qx5.config  qx5_ares.map  qx5_fastj_with_marge.map  qx5_marge.map  qx5_tuv_with_ares.map  qx5_tuv_with_marge.map  qxz.config  qxz_ares.map  qxz_fastj_with_marge.map  qxz_marge.map  qxz_tuv_with_ares.map  qxz_tuv_with_marge.map
how_things_could_be/src/: chemical_mechanism.F90  chemical_mechanism_factory.F90  chemical_mechanism_qx5.F90  chemical_mechanism_qxz.F90  emissions.F90  emissions_ares.F90  emissions_factory.F90  emissions_marge.F90  host_model.F90  map.F90  photolysis.F90  photolysis_factory.F90  photolysis_fastj.F90  photolysis_tuv.F90
how_things_must_be/src/: host_model.F90
